# Solitaire-Chess

./: .gitignore  CMakeLists.txt  README.md  chessboard.cc  main.cc  piece.cc  piece.h  sol-chess  sol-chess-issues.txt  sol-chess-notes.txt
WORKING-ON-IT/: chessboard.cpp  chessboard.hpp  main.cpp  piece.cpp  piece.hpp
include/: chessboard.hpp  coord-conversions.hpp  piece-type-enum.hpp
sol-chess-app/: CMakeLists.txt
sol-chess-lib/: CMakeLists.txt
sol-chess-lib/include/: chessboard.hpp  piece-type-enum.hpp
sol-chess-lib/src/: chessboard.cpp  piece.cpp
src/: chessboard.cpp  coord-conversions.cpp  main.cpp  piece.cpp
